// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`checklists filters withName 1`] = `
{
  "data": {
    "checklists": {
      "__typename": "ChecklistConnection",
      "edges": [
        {
          "__typename": "ChecklistEdge",
          "node": {
            "__typename": "Checklist",
            "id": "d29ya3RlbXBsYXRlOmRlYjljNTcwLWU1ZjMtNDk3MS1iZDdlLWMwMGIwNjQwZjFlZQ==",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "GENERATED DO NOT EDIT PLEASE",
              },
            },
            "status": null,
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "d29ya3RlbXBsYXRlOmRlYjljNTcwLWU1ZjMtNDk3MS1iZDdlLWMwMGIwNjQwZjFlZQ==",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "d29ya3RlbXBsYXRlOmRlYjljNTcwLWU1ZjMtNDk3MS1iZDdlLWMwMGIwNjQwZjFlZQ==",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`checklists filters withStatus 1`] = `
{
  "data": {
    "checklists": {
      "__typename": "ChecklistConnection",
      "edges": [
        {
          "__typename": "ChecklistEdge",
          "node": {
            "__typename": "Checklist",
            "id": 
"d29ya2luc3RhbmNlOndvcmstaW5zdGFuY2VfOGI0M2MzNjItOTUyYi00OGJiLWExMjItN2E2NmRh
YjA5Njg3"
,
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "GENERATED DO NOT EDIT PLEASE",
              },
            },
            "status": {
              "__typename": "ChecklistOpen",
              "openedAt": {
                "__typename": "ZonedDateTime",
                "toString": "2024-10-10T13:54:37.193-07:00[America/Los_Angeles]",
              },
            },
          },
        },
        {
          "__typename": "ChecklistEdge",
          "node": {
            "__typename": "Checklist",
            "id": 
"d29ya2luc3RhbmNlOndvcmstaW5zdGFuY2VfN2ZjMTdhOGMtNzNmOS00ZWE3LTlmNjQtOTBhMTFj
MWY0ZTU0"
,
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "GENERATED DO NOT EDIT",
              },
            },
            "status": {
              "__typename": "ChecklistOpen",
              "openedAt": {
                "__typename": "ZonedDateTime",
                "toString": "2024-10-10T13:48:27.994-07:00[America/Los_Angeles]",
              },
            },
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": 
"d29ya2luc3RhbmNlOndvcmstaW5zdGFuY2VfN2ZjMTdhOGMtNzNmOS00ZWE3LTlmNjQtOTBhMTFj
MWY0ZTU0"
,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": 
"d29ya2luc3RhbmNlOndvcmstaW5zdGFuY2VfOGI0M2MzNjItOTUyYi00OGJiLWExMjItN2E2NmRh
YjA5Njg3"
,
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`checklists filters withName & withStatus 1`] = `
{
  "data": {
    "checklists": {
      "__typename": "ChecklistConnection",
      "edges": [
        {
          "__typename": "ChecklistEdge",
          "node": {
            "__typename": "Checklist",
            "id": 
"d29ya2luc3RhbmNlOndvcmstaW5zdGFuY2VfOGI0M2MzNjItOTUyYi00OGJiLWExMjItN2E2NmRh
YjA5Njg3"
,
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "GENERATED DO NOT EDIT PLEASE",
              },
            },
            "status": {
              "__typename": "ChecklistOpen",
              "openedAt": {
                "__typename": "ZonedDateTime",
                "toString": "2024-10-10T13:54:37.193-07:00[America/Los_Angeles]",
              },
            },
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": 
"d29ya2luc3RhbmNlOndvcmstaW5zdGFuY2VfOGI0M2MzNjItOTUyYi00OGJiLWExMjItN2E2NmRh
YjA5Njg3"
,
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": 
"d29ya2luc3RhbmNlOndvcmstaW5zdGFuY2VfOGI0M2MzNjItOTUyYi00OGJiLWExMjItN2E2NmRh
YjA5Njg3"
,
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`checklists AST entrypoint by default 1`] = `
{
  "data": {
    "checklists": {
      "__typename": "ChecklistConnection",
      "edges": [
        {
          "__typename": "ChecklistEdge",
          "node": {
            "__typename": "Checklist",
            "id": "d29ya3RlbXBsYXRlOmRlYjljNTcwLWU1ZjMtNDk3MS1iZDdlLWMwMGIwNjQwZjFlZQ==",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "GENERATED DO NOT EDIT PLEASE",
              },
            },
            "status": null,
          },
        },
        {
          "__typename": "ChecklistEdge",
          "node": {
            "__typename": "Checklist",
            "id": "d29ya3RlbXBsYXRlOjJiZThjNjdlLTBlMGMtNGMwYi1hM2RiLWI4NjYyYjNiMWYyNA==",
            "name": {
              "__typename": "DisplayName",
              "name": {
                "__typename": "DynamicString",
                "value": "GENERATED DO NOT EDIT",
              },
            },
            "status": null,
          },
        },
      ],
      "pageInfo": {
        "__typename": "PageInfo",
        "endCursor": "d29ya3RlbXBsYXRlOjJiZThjNjdlLTBlMGMtNGMwYi1hM2RiLWI4NjYyYjNiMWYyNA==",
        "hasNextPage": false,
        "hasPreviousPage": false,
        "startCursor": "d29ya3RlbXBsYXRlOmRlYjljNTcwLWU1ZjMtNDk3MS1iZDdlLWMwMGIwNjQwZjFlZQ==",
      },
      "totalCount": 2,
    },
  },
}
`;
